<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:id="@+id/facebookTitleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimaryDark"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp">

            <View
                android:id="@+id/facebookStatusCircleView"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_centerVertical="true"
                android:background="@drawable/green_circle" />

            <TextView
                android:id="@+id/facebookTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/facebookStatusCircleView"
                android:autoLink="web"
                android:padding="5dp"
                android:text="@string/app_name"
                android:textColor="@color/lighterGray"
                android:textSize="14sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/facebookUrlTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/facebookTitleBar"
            android:autoLink="web"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/megadvURL" />

        <TextView
            android:id="@+id/facebookLikesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/facebookUrlTextView"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/likesToday" />

        <TextView
            android:id="@+id/facebookLastLikeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/facebookLikesTextView"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/lastLike" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>