<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <LinearLayout
            android:id="@+id/iconCircleView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:background="@drawable/green_circle"
            android:gravity="center_vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/actionIconView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/icon"
                android:padding="5dp"
                android:src="@drawable/thumbsup" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hourRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/iconCircleView"
            android:gravity="end"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:contentDescription="@string/clock"
                android:src="@drawable/clock" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="01:23"
                android:textColor="@color/gray"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/actionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_below="@+id/hourRow"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/iconCircleView"
            android:text="@string/app_name"
            android:textColor="@color/darkGray"
            android:textSize="14sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>